--- a/Chessboard.css
+++ b/Chessboard.css
@@ -5,8 +5,13 @@ table, td {
 }
 
 td {
-  height: 40px;
-  width: 40px;
+  height: 50px;
+  width: 50px;
+}
+
+img {
+  /* height: 30px; */
+  /* width: 30px; */
 }
 
 table {
